--- a/apps-of-apps/00.acs-deploy-application.yaml
+++ b/apps-of-apps/00.acs-deploy-application.yaml
@@ -9,6 +9,6 @@ spec:
   project: default
   source:
     path: acs-deploy
-    repoURL: 'https://github.com/shailendra14k/gitops.git'
+    repoURL: 'https://github.com/mohansidda/gitops.git'
     targetRevision: HEAD
   syncPolicy: {}
