--- a/apps-of-apps/3.pipeline-application.yaml
+++ b/apps-of-apps/3.pipeline-application.yaml
@@ -10,5 +10,5 @@ spec:
   project: default
   source:
     path: pipeline-deploy
-    repoURL: 'https://github.com/shailendra14k/gitops.git'
+    repoURL: 'https://github.com/mohansidda/gitops.git'
     targetRevision: HEAD
