--- a/pipeline-deploy/11-pvc-my-workshop.yaml
+++ b/pipeline-deploy/11-pvc-my-workshop.yaml
@@ -8,5 +8,5 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: managed-csi
+  storageClassName: gp3
   volumeMode: Filesystem
