--- a/getOtp/route.yaml
+++ b/getOtp/route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: getotp
 spec:
-  host: demo.apps.shailendra14k.in
+  host: demo.apps.rosa-cnn2f.dts3.p1.openshiftapps.com
   path: /getotp
   port:
     targetPort: 8180
